added new banner message

--- a/resources/templates/nav/base.html
+++ b/resources/templates/nav/base.html
@@ -89,7 +89,7 @@
         </div>
         <!-- /.container-fluid -->
     
-    <div class="alert alert-info" style="margin: 0">The site is still in beta so if you find any issues be sure to reach out on <a href="http://twitter.com/gbaleague_com">Twitter: @gbaleague_com</a></div>
+    <div class="alert alert-info" style="margin: 0">Welcome to the new GBALeague.com! If you need to go back to the old site, you can visit the site here at <a href="https://legacy.gbaleague.com">legacy.gbaleague.com</a>. That site only be available until August 15th where it will retire forever.</div>
 </nav>
 
     {% block content %}{% endblock %}
