--- a/resources/templates/discover.html
+++ b/resources/templates/discover.html
@@ -1,5 +1,7 @@
 {% extends 'nav/base.html' %} 
 
+{% block title %}Discover Pokemon Draft Leagues{% endblock %}
+
 {% block content %}
 {% include 'helpers/messages.html' %}
 
