--- a/resources/templates/leagues/base.html
+++ b/resources/templates/leagues/base.html
@@ -1,5 +1,7 @@
 {% extends 'nav/base.html' %} 
 
+{% block title %}{{ league.name }}{% endblock %}
+
 {% block content %}
 <div class="content">
     <div class="container-fluid">
