fixed validation error

--- a/resources/templates/helpers/validation.html
+++ b/resources/templates/helpers/validation.html
@@ -1,7 +1,7 @@
 {% if session().has('validation') %}
 <div class="alert alert-danger">
     <ul>
-        {% for key, value in json.loads(session().get('validation')).items() %}
+        {% for key, value in session().get('validation').items() %}
         <li>{{ value }}</li>
         {% endfor %}
     </ul>
