--- a/resources/templates/create/leagues.html
+++ b/resources/templates/create/leagues.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-xs-8 col-xs-offset-2">
             <div class="panel panel-default">
-                <div class="panel-heading">Create A Team</div>
+                <div class="panel-heading">Create A League</div>
                 <div class="panel-body">
                     {% if request().input('message') %}
                     <div class="alert alert-success">{{ request().input('message') }}</div>
