added 2.1 to 2.2 changes

--- a/resources/templates/auth/login.html
+++ b/resources/templates/auth/login.html
@@ -9,6 +9,15 @@
                 <div class="panel-body">
                 {% include 'helpers/validation.html' %}
                 {% include 'helpers/messages.html' %}
+                {% if session().has('errors') %}
+                <div class="alert alert-danger">
+                    {% for _, messages in session().get('errors').items() %}
+                    {% for error in messages %}
+                    {{ error }}<br>
+                    {% endfor %}
+                    {% endfor %}
+                </div>
+                {% endif %}
                 <form action="/login" method="POST">
                     {{ csrf_field|safe }}
 
